# claude-dotfiles-public

./: .gitignore  AGENTS.md  AGENTS_INDEX.md  AGENT_CONTEXT_PROTOCOL.md  AGENT_STANDARDS.md  ASYNC_ROUTING.md  BINARY_FILE_REFERENCE.md  CDP_PROTOCOL.md  CHANGELOG.md  CLAUDE.md  CLAUDE_ADOPTION_GUIDE.md  COMPONENTS.md  CONFIGURATION_GUIDE.md  CTM_GUIDE.md  GETTING_STARTED.md  HIERARCHY_GUIDE.md  HUBSPOT_IMPLEMENTATION_GUIDE.md  Install Claude Code Config.command  LESSONS_GUIDE.md  PROJECT_MEMORY_GUIDE.md  RAG_GUIDE.md  README.md  RESOURCE_MANAGEMENT.md  SKILLS_INDEX.md  install.sh  settings.example.json
agents/: 80-20-recommender.md  OPTIMIZATION_ROLLBACK_2026-01-28.md  agent-coordination-expert.md  agent-creation-expert.md  api-documentation-generator.md  board-presentation-designer.md  bpmn-specialist.md  brand-extract-docs.md  brand-extract-web.md  brand-kit-compiler.md  brand-kit-extractor.md  claude-md-expert.md  codex-delegate.md  commitment-tracker.md  comparable-project-finder.md  completeness-auditor.md  config-migration-specialist.md  ctm-expert.md  (+126 more)
mcp-servers/rag-server/: IMPROVEMENTS.md  README.md  agent_storage.py  config.json  domain_lexicon.json  embeddings.py  hybrid_search.py  pyproject.toml
mcp-servers/rag-server/src/rag_server/: __init__.py  __main__.py  bm25.py  chunk_classifier.py  chunking.py  date_extraction.py  embeddings.py  hierarchy.py  reranker.py  semantic_chunker.py  server.py  summarizer.py  temporal_boost.py  vectordb.py
mcp-servers/rag-server/src/rag_server/parsers/: __init__.py  code.py  docx.py  html.py  markdown.py  pdf.py  text.py
(+432 files in other folders)
