[project]
name = "rag-server"
version = "0.1.0"
description = "MCP RAG server for Claude Code with local Ollama embeddings and LanceDB"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "lancedb>=0.15.0",
    "httpx>=0.27.0",
    "pymupdf4llm>=0.0.17",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.5",
    "pydantic>=2.0.0",
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_server"]
